# weather

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
src/: config.py  enum.py  getimage.py
